tests/snapshots/examples_fixtures/type_system__failing__201_base_hof_callback_effect_missing_e400.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/201_base_hof_callback_effect_missing_e400.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E400]: MISSING EFFECT

Call to `map_with_io_callback` requires effect `IO` in this function signature.

  --> examples/type_system/failing/201_base_hof_callback_effect_missing_e400.flx:13:13
   |
13 |     let _ = map_with_io_callback(noisy_inc)
   |             ^^^^^^^^^^^^^^^^^^^^
   |             -------------------- effectful call occurs here

Hint:
  Add `with IO` to the enclosing function.


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify () -> Unit with Time with () -> Unit with IO.

  --> examples/type_system/failing/201_base_hof_callback_effect_missing_e400.flx:13:13
   |
13 |     let _ = map_with_io_callback(noisy_inc)
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |             ------------------------------- expected () -> Unit with Time, found () -> Unit with IO

Found 2 errors.
== stdout ==
<not executed>
